# secure_voting

./: AUDIT.md  Anchor.toml  Cargo.toml  README.md  package-lock.json  tsconfig.json
.github/workflows/: test.yml
client/src/: App.js  index.js
client/src/components/: Voting.js
migrations/: deploy.ts
programs/secure_voting/: Cargo.toml
programs/secure_voting/src/: invariant_tests.rs  lib.rs
secure_voting/: Anchor.toml  Cargo.toml  package.json  voter-keypair.json
secure_voting/client/: package-lock.json
secure_voting/client/public/idl/: secure_voting.json
secure_voting/programs/secure_voting/: Cargo.toml
secure_voting/programs/secure_voting/src/: lib.rs
secure_voting/tests/: secure_voting.ts
tests/: secure_voting.ts
