[package]
name = "secure_voting"
version = "0.1.0"
description = "Secure voting system using Shamir's Secret Sharing"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "secure_voting"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
thiserror = "1.0.40"
solana-program = "=1.18.18"

[dev-dependencies]
proptest = "1.0"